OperatorsParser.py
# Generated from Operators.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OperatorsParser ( Parser ):

    grammarFileName = "Operators.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'if'", "':'", "'elif'", 
                     "'else:'", "'while'", "'for'", "'and'", "'or'", "'not'", 
                     "'in'", "'range'", "','", "'['", "']'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
                     "'!='", "'+='", "'-='", "'*='", "'/='", "'=='", "<INVALID>", 
                     "<INVALID>", "'>'", "'<'", "'>='", "'<='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "COMMENT", "MLCOMMENT", "WS", "ID", "STRING", 
                      "INTEGER", "PLUS", "MINUS", "MULT", "DIV", "MOD", 
                      "EQUALS", "NOTEQUALS", "PLUSEQUALS", "MINUSEQUALS", 
                      "TIMESEQUALS", "DIVEQUALS", "COMPEQUALS", "PARENTHESIS", 
                      "BRACKET", "GT", "LT", "GTE", "LTE" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_expression = 3
    RULE_assignmentOperator = 4
    RULE_arithmeticOperator = 5
    RULE_comparisonOperator = 6
    RULE_logicalOperator = 7
    RULE_conditionalStatement = 8
    RULE_ifStatement = 9
    RULE_elifStatement = 10
    RULE_elseStatement = 11
    RULE_whileStatement = 12
    RULE_forStatement = 13
    RULE_logicalAnd = 14
    RULE_logicalOr = 15
    RULE_logicalNot = 16
    RULE_forIn = 17
    RULE_forRange = 18
    RULE_range = 19
    RULE_array = 20

    ruleNames =  [ "program", "statement", "assignment", "expression", "assignmentOperator", 
                   "arithmeticOperator", "comparisonOperator", "logicalOperator", 
                   "conditionalStatement", "ifStatement", "elifStatement", 
                   "elseStatement", "whileStatement", "forStatement", "logicalAnd", 
                   "logicalOr", "logicalNot", "forIn", "forRange", "range", 
                   "array" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    COMMENT=17
    MLCOMMENT=18
    WS=19
    ID=20
    STRING=21
    INTEGER=22
    PLUS=23
    MINUS=24
    MULT=25
    DIV=26
    MOD=27
    EQUALS=28
    NOTEQUALS=29
    PLUSEQUALS=30
    MINUSEQUALS=31
    TIMESEQUALS=32
    DIVEQUALS=33
    COMPEQUALS=34
    PARENTHESIS=35
    BRACKET=36
    GT=37
    LT=38
    GTE=39
    LTE=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OperatorsParser.StatementContext)
            else:
                return self.getTypedRuleContext(OperatorsParser.StatementContext,i)


        def getRuleIndex(self):
            return OperatorsParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = OperatorsParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 42
                self.statement()
                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 7766504) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(OperatorsParser.AssignmentContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(OperatorsParser.IfStatementContext,0)


        def elifStatement(self):
            return self.getTypedRuleContext(OperatorsParser.ElifStatementContext,0)


        def elseStatement(self):
            return self.getTypedRuleContext(OperatorsParser.ElseStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(OperatorsParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(OperatorsParser.ForStatementContext,0)


        def array(self):
            return self.getTypedRuleContext(OperatorsParser.ArrayContext,0)


        def ID(self):
            return self.getToken(OperatorsParser.ID, 0)

        def STRING(self):
            return self.getToken(OperatorsParser.STRING, 0)

        def INTEGER(self):
            return self.getToken(OperatorsParser.INTEGER, 0)

        def COMMENT(self):
            return self.getToken(OperatorsParser.COMMENT, 0)

        def MLCOMMENT(self):
            return self.getToken(OperatorsParser.MLCOMMENT, 0)

        def getRuleIndex(self):
            return OperatorsParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = OperatorsParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.ifStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 49
                self.elifStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 50
                self.elseStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 51
                self.whileStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 52
                self.forStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 53
                self.array()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 54
                self.match(OperatorsParser.ID)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 55
                self.match(OperatorsParser.STRING)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 56
                self.match(OperatorsParser.INTEGER)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 57
                self.match(OperatorsParser.COMMENT)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 58
                self.match(OperatorsParser.MLCOMMENT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(OperatorsParser.ID, 0)

        def assignmentOperator(self):
            return self.getTypedRuleContext(OperatorsParser.AssignmentOperatorContext,0)


        def expression(self):
            return self.getTypedRuleContext(OperatorsParser.ExpressionContext,0)


        def getRuleIndex(self):
            return OperatorsParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = OperatorsParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(OperatorsParser.ID)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 34091302912) != 0):
                self.state = 62
                self.assignmentOperator()
                self.state = 63
                self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(OperatorsParser.ID, 0)

        def STRING(self):
            return self.getToken(OperatorsParser.STRING, 0)

        def INTEGER(self):
            return self.getToken(OperatorsParser.INTEGER, 0)

        def array(self):
            return self.getTypedRuleContext(OperatorsParser.ArrayContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OperatorsParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(OperatorsParser.ExpressionContext,i)


        def logicalOperator(self):
            return self.getTypedRuleContext(OperatorsParser.LogicalOperatorContext,0)


        def assignmentOperator(self):
            return self.getTypedRuleContext(OperatorsParser.AssignmentOperatorContext,0)


        def arithmeticOperator(self):
            return self.getTypedRuleContext(OperatorsParser.ArithmeticOperatorContext,0)


        def comparisonOperator(self):
            return self.getTypedRuleContext(OperatorsParser.ComparisonOperatorContext,0)


        def getRuleIndex(self):
            return OperatorsParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = OperatorsParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.state = 68
                self.match(OperatorsParser.ID)
                pass
            elif token in [21]:
                self.state = 69
                self.match(OperatorsParser.STRING)
                pass
            elif token in [22]:
                self.state = 70
                self.match(OperatorsParser.INTEGER)
                pass
            elif token in [15]:
                self.state = 71
                self.array()
                pass
            elif token in [1]:
                self.state = 72
                self.match(OperatorsParser.T__0)
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 3584) != 0):
                    self.state = 73
                    self.logicalOperator()


                self.state = 76
                self.expression(0)
                self.state = 77
                self.match(OperatorsParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 99
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 97
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = OperatorsParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 81
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 82
                        self.assignmentOperator()
                        self.state = 83
                        self.expression(5)
                        pass

                    elif la_ == 2:
                        localctx = OperatorsParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 85
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 86
                        self.arithmeticOperator()
                        self.state = 87
                        self.expression(4)
                        pass

                    elif la_ == 3:
                        localctx = OperatorsParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 89
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 90
                        self.comparisonOperator()
                        self.state = 91
                        self.expression(3)
                        pass

                    elif la_ == 4:
                        localctx = OperatorsParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 93
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 94
                        self.logicalOperator()
                        self.state = 95
                        self.expression(2)
                        pass

             
                self.state = 101
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AssignmentOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUALS(self):
            return self.getToken(OperatorsParser.EQUALS, 0)

        def PLUSEQUALS(self):
            return self.getToken(OperatorsParser.PLUSEQUALS, 0)

        def MINUSEQUALS(self):
            return self.getToken(OperatorsParser.MINUSEQUALS, 0)

        def TIMESEQUALS(self):
            return self.getToken(OperatorsParser.TIMESEQUALS, 0)

        def DIVEQUALS(self):
            return self.getToken(OperatorsParser.DIVEQUALS, 0)

        def NOTEQUALS(self):
            return self.getToken(OperatorsParser.NOTEQUALS, 0)

        def COMPEQUALS(self):
            return self.getToken(OperatorsParser.COMPEQUALS, 0)

        def getRuleIndex(self):
            return OperatorsParser.RULE_assignmentOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentOperator" ):
                listener.enterAssignmentOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentOperator" ):
                listener.exitAssignmentOperator(self)




    def assignmentOperator(self):

        localctx = OperatorsParser.AssignmentOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignmentOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 34091302912) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(OperatorsParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(OperatorsParser.MINUS, 0)

        def MULT(self):
            return self.getToken(OperatorsParser.MULT, 0)

        def DIV(self):
            return self.getToken(OperatorsParser.DIV, 0)

        def MOD(self):
            return self.getToken(OperatorsParser.MOD, 0)

        def getRuleIndex(self):
            return OperatorsParser.RULE_arithmeticOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticOperator" ):
                listener.enterArithmeticOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticOperator" ):
                listener.exitArithmeticOperator(self)




    def arithmeticOperator(self):

        localctx = OperatorsParser.ArithmeticOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arithmeticOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 260046848) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GT(self):
            return self.getToken(OperatorsParser.GT, 0)

        def LT(self):
            return self.getToken(OperatorsParser.LT, 0)

        def GTE(self):
            return self.getToken(OperatorsParser.GTE, 0)

        def LTE(self):
            return self.getToken(OperatorsParser.LTE, 0)

        def getRuleIndex(self):
            return OperatorsParser.RULE_comparisonOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparisonOperator" ):
                listener.enterComparisonOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparisonOperator" ):
                listener.exitComparisonOperator(self)




    def comparisonOperator(self):

        localctx = OperatorsParser.ComparisonOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_comparisonOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2061584302080) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalAnd(self):
            return self.getTypedRuleContext(OperatorsParser.LogicalAndContext,0)


        def logicalOr(self):
            return self.getTypedRuleContext(OperatorsParser.LogicalOrContext,0)


        def logicalNot(self):
            return self.getTypedRuleContext(OperatorsParser.LogicalNotContext,0)


        def getRuleIndex(self):
            return OperatorsParser.RULE_logicalOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalOperator" ):
                listener.enterLogicalOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalOperator" ):
                listener.exitLogicalOperator(self)




    def logicalOperator(self):

        localctx = OperatorsParser.LogicalOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_logicalOperator)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.logicalAnd()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.logicalOr()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.logicalNot()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStatement(self):
            return self.getTypedRuleContext(OperatorsParser.IfStatementContext,0)


        def elifStatement(self):
            return self.getTypedRuleContext(OperatorsParser.ElifStatementContext,0)


        def elseStatement(self):
            return self.getTypedRuleContext(OperatorsParser.ElseStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(OperatorsParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(OperatorsParser.ForStatementContext,0)


        def getRuleIndex(self):
            return OperatorsParser.RULE_conditionalStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionalStatement" ):
                listener.enterConditionalStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionalStatement" ):
                listener.exitConditionalStatement(self)




    def conditionalStatement(self):

        localctx = OperatorsParser.ConditionalStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_conditionalStatement)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.ifStatement()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.elifStatement()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.elseStatement()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 116
                self.whileStatement()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 117
                self.forStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OperatorsParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(OperatorsParser.ExpressionContext,i)


        def statement(self):
            return self.getTypedRuleContext(OperatorsParser.StatementContext,0)


        def elifStatement(self):
            return self.getTypedRuleContext(OperatorsParser.ElifStatementContext,0)


        def elseStatement(self):
            return self.getTypedRuleContext(OperatorsParser.ElseStatementContext,0)


        def getRuleIndex(self):
            return OperatorsParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = OperatorsParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(OperatorsParser.T__2)
            self.state = 122 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 121
                self.expression(0)
                self.state = 124 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 7372802) != 0)):
                    break

            self.state = 126
            self.match(OperatorsParser.T__3)
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 127
                self.expression(0)
                pass

            elif la_ == 2:
                self.state = 128
                self.statement()
                pass

            elif la_ == 3:
                self.state = 129
                self.elifStatement()
                pass

            elif la_ == 4:
                self.state = 130
                self.elseStatement()
                pass


            self.state = 136
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 133
                    self.expression(0) 
                self.state = 138
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElifStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OperatorsParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(OperatorsParser.ExpressionContext,i)


        def statement(self):
            return self.getTypedRuleContext(OperatorsParser.StatementContext,0)


        def elseStatement(self):
            return self.getTypedRuleContext(OperatorsParser.ElseStatementContext,0)


        def getRuleIndex(self):
            return OperatorsParser.RULE_elifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElifStatement" ):
                listener.enterElifStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElifStatement" ):
                listener.exitElifStatement(self)




    def elifStatement(self):

        localctx = OperatorsParser.ElifStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_elifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(OperatorsParser.T__4)
            self.state = 140
            self.expression(0)
            self.state = 141
            self.match(OperatorsParser.T__3)
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 142
                self.expression(0)
                pass

            elif la_ == 2:
                self.state = 143
                self.statement()
                pass

            elif la_ == 3:
                self.state = 144
                self.elseStatement()
                pass


            self.state = 150
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 147
                    self.expression(0) 
                self.state = 152
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OperatorsParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(OperatorsParser.ExpressionContext,i)


        def statement(self):
            return self.getTypedRuleContext(OperatorsParser.StatementContext,0)


        def getRuleIndex(self):
            return OperatorsParser.RULE_elseStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseStatement" ):
                listener.enterElseStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseStatement" ):
                listener.exitElseStatement(self)




    def elseStatement(self):
